Structured main page. Added info for Poltergram, Christmas Late Run and Water Ski.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,328 @@
     <title>Faulty Olive</title>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
-    <img id="logo" src="logo.svg">
+  <body bgcolor="#f6f8f1">
+  <table width="100%" bgcolor="#f6f8f1" border="0" cellpadding="0" cellspacing="0">
+    <tr>
+      <td>
+
+        <!-- site header -->
+        <table class="content" align="center" cellpadding="0" cellspacing="0" border="0">
+          <tr>
+            <td class="header" bgcolor="#44525f">
+              <table width="70" align="left" border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td height="70" style="padding: 0 20px 20px 0;">
+                    <img src="img/logo.svg" width="70" height="70" border="0" alt=""/>
+                  </td>
+                </tr>
+              </table>
+              <table width="425" align="left" cellpadding="0" cellspacing="0" border="0">
+                <tr>
+                  <td>
+                    <table class="col425" align="left" border="0" cellpadding="0" cellspacing="0" style="width: 100%; max-width: 425px;">
+                      <tr>
+                        <td height="70">
+                          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                              <td class="subhead" style="padding: 0 0 0 3px;">
+                                Small header
+                              </td>
+                            </tr>
+                            <tr>
+                              <td class="h1" style="padding: 5px 0 0 0;">
+                                Slightly larger header
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <!-- table entry with title -->
+          <!--tr>
+            <td class="innerpadding borderbottom">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td class="h2">
+                    Title!
+                  </td>
+                </tr>
+                <tr>
+                  <td class="bodycopy">
+                    Text and text and text and text and text and text and text and text and text and text and text and text and text and text and text and text.
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr-->
+
+          <!-- table entry with two columns and a button -->
+          <!--tr>
+            <td class="innerpadding borderbottom">
+              <table width="115" align="left" border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td height="115" style="padding: 0 20px 20px 0;">
+                    <img src="img/logo.svg" width="115" height="115" border="0" alt="" />
+                  </td>
+                </tr>
+              </table>
+              <table width="380" align="left" cellpadding="0" cellspacing="0" border="0">
+                <tr>
+                  <td>
+                    <table class="col380" align="left" border="0" cellpadding="0" cellspacing="0" style="width: 100%; max-width: 380px;">
+                      <tr>
+                        <td>
+                          <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                            <tr>
+                              <td class="bodycopy">
+                                Text and text and text and text and text and text and text and text and text and text and text and text and text and text and text and text.
+                              </td>
+                            </tr>
+                            <tr>
+                              <td style="padding: 20px 0 0 0;">
+                                <table class="buttonwrapper" bgcolor="#e05443" border="0" cellspacing="0" cellpadding="0">
+                                  <tr>
+                                    <td class="button" height="45">
+                                      <a href="#">Button!</a>
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr-->
+
+          <!-- table entry with a single image -->
+          <!--tr>
+            <td class="innerpadding borderbottom">
+              <img src="img/logo.svg" width="100%" border="0" alt=""/>
+            </td>
+          </tr-->
+
+          <!-- santa table entry -->
+          <tr>
+            <td class="innerpadding borderbottom">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.faultyolive.santa"><img src="img/santa-title.png" width="100%" border="0" alt=""/></a>
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <img src="img/santa-gif.gif" width="80%" border="0" alt=""/>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="bodycopy">
+                    <br>It's getting late and Santa still has lots of gifts to deliver! Guide Rudolph through the Christmas Eve and deliver gifts to all homes in your path.
+                    <br>There's a new track everyday, so challenge your friends and give it all you've got!
+                    <br>
+                    <br>★ Daily Mode: a new track every day!
+                    <br>★ Random Mode: get a different track everytime you play this mode!
+                    <br>★ Highscores for the daily track and the best score ever.
+                    <br>★ Simple and fun gameplay.
+                    <br>★ Endless tracks with increasing difficulty.
+                    <br>★ Integrated share functionality to challenge your friends.
+                    <br>★ Authentic free-to-play model! No paywalls or in-app purchases.
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td class="bodycopy">
+                    <br>Available on:
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.faultyolive.santa"><img src="img/google-play-badge.png" width="128px" border="0" alt=""/></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <br>
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <iframe width="420" height="720" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <!-- waterski table entry -->
+          <tr>
+            <td class="innerpadding borderbottom">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski"><img src="img/waterski-title.png" width="100%" border="0" alt=""/></a>
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <img src="img/waterski-gif.gif" width="80%" border="0" alt=""/>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="bodycopy">
+                    <br>Navigate your boat and skier buddy up the endless river, through tight turns and while dodging rocky obstacles.
+                    <br>Don't forget to pickup some fuel canisters as you go!
+                    <br>There's a new track everyday, so challenge your friends and give it all you've got!
+                    <br>
+                    <br>★ Daily Mode: a new track every day!
+                    <br>★ Random Mode: get a different track everytime you play this mode!
+                    <br>★ Highscores for the daily track and the best score ever.
+                    <br>★ Simple and fun gameplay.
+                    <br>★ Endless river tracks with increasing difficulty.
+                    <br>★ Integrated share functionality to challenge your friends.
+                    <br>★ Authentic free-to-play model! No paywalls or in-app purchases.
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td class="bodycopy">
+                    <br>Available on:
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski"><img src="img/google-play-badge.png" width="128px" border="0" alt=""/></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <br>
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <iframe width="420" height="720" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <!-- poltergram table entry -->
+          <tr>
+            <td class="innerpadding borderbottom">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td>
+                    <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td height="128" style="padding: 0 20px 20px 0;">
+                          <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram"><img src="img/poltergram-logo.png" width="128" height="128" border="0" alt=""/></a>
+                        </td>
+                      </tr>
+                    </table>
+                    <table width="380" align="left" cellpadding="0" cellspacing="0" border="0">
+                      <tr>
+                        <td class="title">
+                          <br>Poltergram
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="bodycopy">
+                    <br>Poltergram is a ghost detector camera application.
+                    <br>You can take pictures of your friends and see spirits interacting with them.
+                    <br>Use it to prank your friends or to add a scary touch to your photos.
+                    <br>It is a ghost in your photo prank / ghost in your picture prank !
+                    <br>Perfect for April fools, Carnival and Halloween!
+                    <br>● Instagram meet Poltergeist plus more ●
+                    <br>
+                    <br>It can detect:
+                    <br>★ Spirits
+                    <br>★ Ghosts
+                    <br>★ Mummies
+                    <br>★ Dead people and murders
+                    <br>★ Vampires
+                    <br>★ Zombies .. and more to come.
+                    <br>The results are photos with dead people and ghostly artifacts that are all around all of us.
+                    <br>
+                    <br>Not yet another ghost camera app?
+                    <br>Poltergram is unique from most (if not all) other ghost detector apps because the photo composition and ghost placement is all done "automagically". You don't have to manually choose ghosts and position them.. it all just happen nicely.
+                    <br>• Uses artificial intelligence (genetic algorithms) to compose a photo, insert ghosts and manage it with people in the picture to make sense.
+                    <br>• Uses facial recognition to understand how to best use people in the photos.
+                    <br>• Also, can work with people-less photos and compose a photo with amazing composition and great results.
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td class="bodycopy">
+                    <br>Available on:
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram"><img src="img/google-play-badge.png" width="128px" border="0" alt=""/></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <br>
+                  </td>
+                </tr>
+                <tr align="center">
+                  <td>
+                    <img src="img/poltergram-examples.jpg" width="80%" border="0" alt=""/>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+          <!-- footer -->
+          <tr>
+            <td class="footer" bgcolor="#44525f">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td align="center" class="footercopy">
+                    Faulty Olive by inEvo (2015) ?<br/>
+                    <a href="#">Link</a> to something useful
+                  </td>
+                </tr>
+                <tr>
+                  <td align="center" style="padding: 20px 0 0 0;">
+                    <table border="0" cellspacing="0" cellpadding="0">
+                      <tr>
+                        <td width="37" style="text-align: center; padding: 0 10px 0 10px;">
+                          <a href="http://www.facebook.com/">
+                            <img src="img/logo.svg" width="37" height="37" alt="Facebook" border="0" />
+                          </a>
+                        </td>
+                        <td width="37" style="text-align: center; padding: 0 10px 0 10px;">
+                          <a href="http://www.twitter.com/">
+                            <img src="img/logo.svg" width="37" height="37" alt="Twitter" border="0" />
+                          </a>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+
+        </table>
+      </td>
+    </tr>
+  </table>
   </body>
 </html>
