Added promo-graphics and anchorpoint jumps.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
   <div id="header">
     <img id="logo" src="img/logo.svg"/>
     <div id="menu">
-      <!--
-      <a href="#"><img class="menu-item" src="img/icon.png"/></a>
-      <a href="#"><img class="menu-item" src="img/icon.png"/></a>
-      <a href="#"><img class="menu-item" src="img/icon.png"/></a>
-      -->
+      <a href="#christmas-late-run"><img class="menu-item" src="img/santa-promo-graphic.png"/></a>
+      <a href="#waterski"><img class="menu-item" src="img/waterski-promo-graphic.png"/></a>
+      <a href="#poltergram"><img class="menu-item" src="img/poltergram-promo-graphic.png"/></a>
     </div>
   </div>
 
