Added application icons and removed promo-graphics.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="header">
     <img id="logo" src="img/logo.svg"/>
     <div id="menu">
-      <a href="#christmas-late-run"><img class="menu-item" src="img/santa-promo-graphic.png"/></a>
-      <a href="#waterski"><img class="menu-item" src="img/waterski-promo-graphic.png"/></a>
-      <a href="#poltergram"><img class="menu-item" src="img/poltergram-promo-graphic.png"/></a>
+      <a href="#santa"><img class="menu-item" src="img/santa-icon.png"/></a>
+      <a href="#waterski"><img class="menu-item" src="img/waterski-icon.png"/></a>
+      <a href="#poltergram"><img class="menu-item" src="img/poltergram-icon.png"/></a>
     </div>
   </div>
 
@@ -73,7 +73,7 @@
 
     <!-- POLTERGRAM -->
     <div id="poltergram" class="section">
-      <img class="section-title" src="img/poltergram-logo.png">
+      <img class="section-title" src="img/poltergram-icon.png">
       <img class="section-image" src="img/poltergram-examples.jpg">
       <div class="section-description">
         Poltergram is a ghost detector camera application.
@@ -98,12 +98,11 @@
         • Uses facial recognition to understand how to best use people in the photos.
         • Also, can work with people-less photos and compose a photo with amazing composition and great results.
       </div>
-      <div class="section-video">
-        <iframe width="420" height="720" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+      <div>
+        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
+          <img class="section-badge" src="img/google-play-badge.png">
+        </a>
       </div>
-      <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
-        <img class="section-badge" src="img/google-play-badge.png">
-      </a>
     </div>
 
   </div>
