--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
 
     <!-- SANTA -->
     <div id="santa" class="section">
-      <img class="section-title" src="img/santa-title.png">
-      <img class="section-image" src="img/santa-gif.gif">
+      <img class="section-icon" src="img/santa-icon.png">
+      <div class="section-title">Christmas Late Run</div>
+
+      <div class="section-links">
+        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
+          <img class="section-badge" src="img/google-play-badge.png">
+        </a>
+      </div>
+
       <div class="section-description">
         It's getting late and Santa still has lots of gifts to deliver! Guide Rudolph through the Christmas Eve and deliver gifts to all homes in your path.
         There's a new track everyday, so challenge your friends and give it all you've got!
@@ -36,20 +43,23 @@
         ★ Integrated share functionality to challenge your friends.
         ★ Authentic free-to-play model! No paywalls or in-app purchases.
       </div>
-      <div class="section-video">
-        <iframe width="420" height="720" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div class="section-links">
-        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
-          <img class="section-badge" src="img/google-play-badge.png">
-        </a>
-      </div>
+
+      <img class="section-image" src="img/santa-gif.gif">
+      <iframe class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+
     </div>
 
     <!-- WATERSKI -->
     <div id="waterski" class="section">
-      <img class="section-title" src="img/waterski-title.png">
-      <img class="section-image" src="img/waterski-gif.gif">
+      <img class="section-icon" src="img/waterski-icon.png">
+      <div class="section-title">Water Ski</div>
+
+      <div class="section-links">
+        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
+          <img class="section-badge" src="img/google-play-badge.png">
+        </a>
+      </div>
+
       <div class="section-description">
         Navigate your boat and skier buddy up the endless river, through tight turns and while dodging rocky obstacles.
         Don't forget to pickup some fuel canisters as you go!
@@ -63,18 +73,22 @@
         ★ Integrated share functionality to challenge your friends.
         ★ Authentic free-to-play model! No paywalls or in-app purchases.
       </div>
-      <div class="section-video">
-        <iframe width="420" height="720" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <a href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
-        <img class="section-badge" src="img/google-play-badge.png">
-      </a>
+
+      <img class="section-image" src="img/santa-gif.gif">
+      <iframe class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <!-- POLTERGRAM -->
     <div id="poltergram" class="section">
-      <img class="section-title" src="img/poltergram-icon.png">
-      <img class="section-image" src="img/poltergram-examples.jpg">
+      <img class="section-icon" src="img/poltergram-icon.png">
+      <div class="section-title">Poltergram</div>
+
+      <div class="section-links">
+        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
+          <img class="section-badge" src="img/google-play-badge.png">
+        </a>
+      </div>
+
       <div class="section-description">
         Poltergram is a ghost detector camera application.
         You can take pictures of your friends and see spirits interacting with them.
@@ -98,11 +112,8 @@
         • Uses facial recognition to understand how to best use people in the photos.
         • Also, can work with people-less photos and compose a photo with amazing composition and great results.
       </div>
-      <div>
-        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
-          <img class="section-badge" src="img/google-play-badge.png">
-        </a>
-      </div>
+
+      <img class="section-image" src="img/poltergram-examples.jpg">
     </div>
 
   </div>
