Removed unused resources. Added titles to the icons. Changed the waterski gif.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="header">
     <img id="logo" src="img/logo.svg"/>
     <div id="menu">
-      <a href="#santa"><img class="menu-item" src="img/santa-icon.png"/></a>
-      <a href="#waterski"><img class="menu-item" src="img/waterski-icon.png"/></a>
-      <a href="#poltergram"><img class="menu-item" src="img/poltergram-icon.png"/></a>
+      <a href="#santa" title="Christmas Late Run"><img class="menu-item" src="img/santa-icon.png"/></a>
+      <a href="#waterski" title="Water Ski"><img class="menu-item" src="img/waterski-icon.png"/></a>
+      <a href="#poltergram" title="Poltergram"><img class="menu-item" src="img/poltergram-icon.png"/></a>
     </div>
   </div>
 
@@ -74,7 +74,7 @@
         ★ Authentic free-to-play model! No paywalls or in-app purchases.
       </div>
 
-      <img class="section-image" src="img/santa-gif.gif">
+      <img class="section-image" src="img/waterski-gif.gif">
       <iframe class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
     </div>
 
