Tweaked image sizing to prevent squashing. Added back to top buttons.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <!-- SANTA -->
     <div id="santa" class="section">
       <img class="section-icon" src="img/santa-icon.png">
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
       <div class="section-title">Christmas Late Run</div>
 
       <div class="section-links">
@@ -52,6 +53,7 @@
     <!-- WATERSKI -->
     <div id="waterski" class="section">
       <img class="section-icon" src="img/waterski-icon.png">
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
       <div class="section-title">Water Ski</div>
 
       <div class="section-links">
@@ -81,6 +83,7 @@
     <!-- POLTERGRAM -->
     <div id="poltergram" class="section">
       <img class="section-icon" src="img/poltergram-icon.png">
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
       <div class="section-title">Poltergram</div>
 
       <div class="section-links">
