Tweaked back to top icon and added poltergram screenshots.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
         • Also, can work with people-less photos and compose a photo with amazing composition and great results.
       </div>
 
-      <img class="section-image" src="img/poltergram-examples.jpg">
+      <img class="section-image" src="img/poltergram-screenshot1.jpg">
+      <img class="section-image" src="img/poltergram-screenshot2.jpg">
+      <img class="section-image" src="img/poltergram-screenshot3.jpg">
     </div>
 
   </div>
