Added radial gradient to header. Changed colors and padding.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
         ★ Authentic free-to-play model! No paywalls or in-app purchases.
       </div>
 
-      <img class="section-image" src="img/santa-gif.gif">
-      <iframe class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+      <div class="section-media">
+        <img class="section-image" src="img/santa-gif.gif">
+        <iframe class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+      </div>
 
     </div>
 
@@ -76,8 +78,11 @@
         ★ Authentic free-to-play model! No paywalls or in-app purchases.
       </div>
 
-      <img class="section-image" src="img/waterski-gif.gif">
-      <iframe class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
+      <div class="section-media">
+        <img class="section-image" src="img/waterski-gif.gif">
+        <iframe class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
+      </div>
+
     </div>
 
     <!-- POLTERGRAM -->
@@ -116,9 +121,12 @@
         • Also, can work with people-less photos and compose a photo with amazing composition and great results.
       </div>
 
-      <img class="section-image" src="img/poltergram-screenshot1.jpg">
-      <img class="section-image" src="img/poltergram-screenshot2.jpg">
-      <img class="section-image" src="img/poltergram-screenshot3.jpg">
+      <div class="section-media">
+        <img class="section-image" src="img/poltergram-screenshot1.jpg">
+        <img class="section-image" src="img/poltergram-screenshot2.jpg">
+        <img class="section-image" src="img/poltergram-screenshot3.jpg">
+      </div>
+
     </div>
 
   </div>
