Added schema for santa, waterski and poltergram.

--- a/index.html
+++ b/index.html
@@ -21,18 +21,27 @@
   <div id="content">
 
     <!-- SANTA -->
-    <div id="santa" class="section">
-      <img class="section-icon" src="img/santa-icon.png">
-      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
-      <div class="section-title">Christmas Late Run</div>
+    <div id="santa" class="section" itemscope itemtype="http://schema.org/VideoGame">
 
-      <div class="section-links">
-        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
+      <meta itemprop="playMode" content="single-player">
+      <meta itemprop="author" content="Faulty Olive">
+      <meta itemprop="copyrightHolder" content="Faulty Olive">
+      <meta itemprop="copyrightYear" content="2015">
+      <meta itemprop="genre" content="casual">
+
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png">
+
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+
+      <div itemprop="name" class="section-title">Christmas Late Run</div>
+
+      <div itemprop="gameLocation" class="section-links">
+        <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.santa">
           <img class="section-badge" src="img/google-play-badge.png">
         </a>
       </div>
 
-      <div class="section-description">
+      <div itemprop="about" class="section-description">
         It's getting late and Santa still has lots of gifts to deliver! Guide Rudolph through the Christmas Eve and deliver gifts to all homes in your path.
         There's a new track everyday, so challenge your friends and give it all you've got!
 
@@ -46,25 +55,34 @@
       </div>
 
       <div class="section-media">
-        <img class="section-image" src="img/santa-gif.gif">
-        <iframe class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
+        <img itemprop="screenshot" class="section-image" src="img/santa-gif.gif">
+        <iframe itemprop="trailer" class="section-video" src="https://www.youtube.com/embed/gCULskwYHuk" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </div>
 
     <!-- WATERSKI -->
-    <div id="waterski" class="section">
-      <img class="section-icon" src="img/waterski-icon.png">
-      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
-      <div class="section-title">Water Ski</div>
+    <div id="waterski" class="section" itemscope itemtype="http://schema.org/VideoGame">
 
-      <div class="section-links">
-        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
+      <meta itemprop="playMode" content="single-player">
+      <meta itemprop="author" content="Faulty Olive">
+      <meta itemprop="copyrightHolder" content="Faulty Olive">
+      <meta itemprop="copyrightYear" content="2015">
+      <meta itemprop="genre" content="casual">
+
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png">
+
+      <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+
+      <div itemprop="name" class="section-title">Water Ski</div>
+
+      <div itemprop="gameLocation" class="section-links">
+        <a itemprop="gamePlatform" href="https://play.google.com/store/apps/details?id=com.faultyolive.waterski">
           <img class="section-badge" src="img/google-play-badge.png">
         </a>
       </div>
 
-      <div class="section-description">
+      <div itemprop="about" class="section-description">
         Navigate your boat and skier buddy up the endless river, through tight turns and while dodging rocky obstacles.
         Don't forget to pickup some fuel canisters as you go!
         There's a new track everyday, so challenge your friends and give it all you've got!
@@ -79,16 +97,19 @@
       </div>
 
       <div class="section-media">
-        <img class="section-image" src="img/waterski-gif.gif">
-        <iframe class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
+        <img itemprop="screenshot" class="section-image" src="img/waterski-gif.gif">
+        <iframe itemprop="trailer" class="section-video" src="https://www.youtube.com/embed/Xf8JVPgo32k" frameborder="0" allowfullscreen></iframe>
       </div>
 
     </div>
 
     <!-- POLTERGRAM -->
     <div id="poltergram" class="section">
+
       <img class="section-icon" src="img/poltergram-icon.png">
+
       <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
+
       <div class="section-title">Poltergram</div>
 
       <div class="section-links">
