Tweaks to the schema.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <!-- SANTA -->
     <div id="santa" class="section" itemscope itemtype="http://schema.org/VideoGame">
 
+      <meta itemprop="applicationCategory" content="Game">
       <meta itemprop="playMode" content="single-player">
       <meta itemprop="author" content="Faulty Olive">
       <meta itemprop="copyrightHolder" content="Faulty Olive">
       <meta itemprop="copyrightYear" content="2015">
       <meta itemprop="genre" content="casual">
+      <meta itemprop="contentRating" content="PEGI 3">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/santa-icon.png">
 
@@ -64,11 +66,13 @@
     <!-- WATERSKI -->
     <div id="waterski" class="section" itemscope itemtype="http://schema.org/VideoGame">
 
+      <meta itemprop="applicationCategory" content="Game">
       <meta itemprop="playMode" content="single-player">
       <meta itemprop="author" content="Faulty Olive">
       <meta itemprop="copyrightHolder" content="Faulty Olive">
       <meta itemprop="copyrightYear" content="2015">
       <meta itemprop="genre" content="casual">
+      <meta itemprop="contentRating" content="PEGI 3">
 
       <img itemprop="thumbnailUrl" class="section-icon" src="img/waterski-icon.png">
 
@@ -104,21 +108,27 @@
     </div>
 
     <!-- POLTERGRAM -->
-    <div id="poltergram" class="section">
+    <div id="poltergram" class="section" itemscope itemtype="http://schema.org/MobileApplication">
 
-      <img class="section-icon" src="img/poltergram-icon.png">
+      <meta itemprop="applicationCategory" content="Multimedia">
+      <meta itemprop="author" content="Faulty Olive">
+      <meta itemprop="copyrightHolder" content="Faulty Olive">
+      <meta itemprop="copyrightYear" content="2014">
+      <meta itemprop="contentRating" content="PEGI 12">
+
+      <img itemprop="thumbnailUrl" class="section-icon" src="img/poltergram-icon.png">
 
       <a href="#" title="Back to top"><img class="section-back" src="img/back-to-top-icon.png"></a>
 
       <div class="section-title">Poltergram</div>
 
       <div class="section-links">
-        <a href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
+        <a itemprop="downloadUrl" href="https://play.google.com/store/apps/details?id=com.faultyolive.poltergram">
           <img class="section-badge" src="img/google-play-badge.png">
         </a>
       </div>
 
-      <div class="section-description">
+      <div itemprop="about" class="section-description">
         Poltergram is a ghost detector camera application.
         You can take pictures of your friends and see spirits interacting with them.
         Use it to prank your friends or to add a scary touch to your photos.
@@ -143,9 +153,9 @@
       </div>
 
       <div class="section-media">
-        <img class="section-image" src="img/poltergram-screenshot1.jpg">
-        <img class="section-image" src="img/poltergram-screenshot2.jpg">
-        <img class="section-image" src="img/poltergram-screenshot3.jpg">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot1.jpg">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot2.jpg">
+        <img itemprop="screenshot" class="section-image" src="img/poltergram-screenshot3.jpg">
       </div>
 
     </div>
